syntax = "proto3";
package microtx.v1;

option go_package = "github.com/althea-net/althea-chain/x/microtx/types";

// Params struct
message Params { uint64 xfer_fee_basis_points = 1; }

message GenesisState { Params params = 1; }